fix(table): style bug on Firefox

--- a/src/components/table/style/index.less
+++ b/src/components/table/style/index.less
@@ -26,21 +26,14 @@
       letter-spacing: 0;
       border-style: hidden;
       border-radius: 4px;
-      border-collapse: collapse;
+      border-collapse: separate;
       border-spacing: 0;
-      // hack
-      box-shadow: 0 0 0 1px @color-border-table;
     }
   }
   // hack
   &-fixed-header &-container,
   &-fixed-column &-container {
-    border: 0.5px solid @color-border-table;
     border-radius: @radius-border-small;
-  }
-
-  &-fixed-header &-container > &-header {
-    border-bottom: 0.5px solid @color-border-table;
   }
 
   &-fixed-header &-container > &-body > table {
@@ -73,6 +66,7 @@
   }
 
   &-thead > tr:first-child > &-cell {
+    border-top: 0.5px solid @color-border-table;
     &:first-child {
       border-top-left-radius: @radius-border-small;
     }
@@ -85,7 +79,11 @@
     padding: 16px;
     vertical-align: middle;
     background-color: @color-background-table-head;
-    border: 0.5px solid @color-border-table;
+    border-right: 0.5px solid @color-border-table;
+    border-bottom: 0.5px solid @color-border-table;
+    &:first-child {
+      border-left: 0.5px solid @color-border-table;
+    }
   }
 
   &-tbody > tr {
@@ -106,10 +104,16 @@
     padding: 16px;
     overflow-wrap: break-word;
     background-color: @color-background-table-body;
-    border-top: 0.5px solid @color-border-table;
+    border-top: unset;
     border-right: unset;
     border-bottom: 0.5px solid @color-border-table;
     border-left: unset;
+    &:first-child {
+      border-left: 0.5px solid @color-border-table;
+    }
+    &:last-child {
+      border-right: 0.5px solid @color-border-table;
+    }
   }
 
   &-showHover &-tbody > tr {
@@ -147,12 +151,6 @@
       display: block;
       overflow: hidden;
       text-overflow: ellipsis;
-    }
-
-    // border-collapse: collapse && position: sticky; will cause border disappear
-    &-fix-left:not(&-fix-left-last),
-    &-fix-right:not(&-fix-right-last) {
-      box-shadow: 1px 0 0 0 @color-border-table;
     }
 
     &-fix-left-last {
